Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17649

fix -EACCESS connection error handling

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      When connection request receives -EACCESS/-EROFS it leaves import in intermediate state. While obd_no_recov is set on OBD, related import is still active as well as pinger. That leads to continious reconnect attempts and possibly successful import recovery if server updates own security preferencies. After that import is evicted and recovered to FULL state but OBD still has obd_no_recov so any other RPC over such import return -ESHUTDOWN all the time and import can't be neither activated nor recovered

      Correct solution could be the stopping pinger and closing import or not setting obd_no_recov at all but set imp_deactive instead. The latter would allow import to be recovered manually and that is more flexible option than closing it immediately

      Also for target-target connections like LWP, MDT-OST and MDT-MDT would be better to never stop import but keep connecting considering that is temporary and either remote target will reconfigure own security or target itself requires administrative attention. 

      Attachments

        Activity

          People

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: