lustre/tests/recovery-small.sh
@@ -3633,6 +3633,47 @@ test_157()
 }
 run_test 157 "eviction during mmaped i/o"
 
+cleanup_158() {
+	do_facet mds2 $LCTL set_param fail_loc=0
+	zconf_umount_clients $CLIENTS $MOUNT
+	mountcli
+}
+
+test_158a() {
+	(( $MDS1_VERSION >= $(version_code 2.15.62) )) ||
+		skip "Need MDS version at least 2.15.62 for -EACCES fix"
+	(( MDSCOUNT > 1 )) || skip "needs >= 2 MDTS"
+
+	remount_client $MOUNT
+	# ensure there is no MOUNT2 on clients
+	zconf_umount_clients $CLIENTS $MOUNT2 -f
+
+	stack_trap cleanup_158 EXIT RETURN
+
+	# client import is evicted after failover followed by -EACCES
+	#define OBD_FAIL_MDS_CONNECT_ACCESS	0x2402
+	do_facet mds2 $LCTL set_param fail_loc=0x2402
+	fail_nodf mds2
+	sleep 5
+	$LFS df $MOUNT
+	do_facet mds2 $LCTL set_param fail_loc=0
+	wait_recovery_complete mds2 || error "MDS recovery not done"
+	sleep 5
+
+	local mdc2=$($LCTL dl | awk '/mdc.*MDT0001-mdc*/ { print $4}')
+	local active=$($LCTL get_param -n mdc.$mdc2.active)
+	(( active == 0 )) || error "import status is 'active'"
+	$LCTL --device $mdc2 activate
+	active=$($LCTL get_param -n mdc.$mdc2.active)
+	(( active == 1 )) || error "import status is not 'active'"
+	status=$($LFS check mdts | grep $mdc2 | grep -c active)
+	(( status == 1 )) || {
+		$LFS check mdts
+		error "import is not operational"
+	}
+}
+run_test 158a "connect without access right"
+
 complete_test $SECONDS
 check_and_cleanup_lustre
 exit_status
